--- a/README.pod
+++ b/README.pod
@@ -101,7 +101,7 @@ independently. So when one only wants a single class or module the easiest way
 is to only import that module, try to build and see which modules VBA is
 missing.
 
-Espeically all the C<Test_> modules only contain tests and need not be imported.
+Especially all the C<Test_> modules only contain tests and need not be imported.
 
 =head1 LICENSE
 
@@ -109,7 +109,7 @@ Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
+    https://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
