--- a/README.pod
+++ b/README.pod
@@ -111,7 +111,7 @@ Especially all the C<Test_> modules only contain tests and need not be imported.
 =head1 LICENSE
 
 Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
+you may not use this library except in compliance with the License.
 You may obtain a copy of the License at
 
     https://www.apache.org/licenses/LICENSE-2.0
